fix: resolve shell syntax error in CI workflow
- Fix incomplete modulo operation in TAG_INDEX calculation (line 623)
- Complete expression: TAG_INDEX=$((GITHUB_RUN_NUMBER % array_length))
- Resolves "unexpected EOF while looking for matching )" error
- Ensures proper random tag selection from TAG_OPTIONS array

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -620,7 +620,7 @@ jobs:
           APP_KEY="$APPLICATION_KEY"
           
           TAG_OPTIONS=(release hotfix feature bugfix enhancement security performance refactor)
-          TAG_INDEX=$((${GITHUB_RUN_NUMBER:-0} % ${
+          TAG_INDEX=$((${GITHUB_RUN_NUMBER:-0} % ${#TAG_OPTIONS[@]}))
           APP_TAG="${TAG_OPTIONS[$TAG_INDEX]}"
           
           ACTUAL_BUILD_NAME="${{ needs.build-test-publish.outputs.build_name }}"
