Update workflows and clean up obsolete files
- Update CI and promotion-rollback workflows
- Update demo integration documentation
- Remove obsolete integration scripts and rollback scripts
- Add .venv to gitignore to exclude virtual environment files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,7 @@ jobs:
           echo "APPLICATION_KEY=bookverse-recommendations" >> $GITHUB_ENV
 
       - name: "[Setup] JFrog CLI"
-        uses: EyalDelarea/setup-jfrog-cli@swampUpAppTrust
+        uses: bookverse-infra/.github/actions/generate-oidc-token@main
         with:
           version: latest
           oidc-provider-name: bookverse-recommendations-github
@@ -133,17 +133,15 @@ jobs:
           jf rt ping
           echo "✅ JFrog authentication successful"
 
-      - name: "[Auth] OIDC Token Exchange (bookverse-devops shared script)"
-        id: exchange-oidc
-        run: |
-          echo "🔐 Using bookverse-devops shared OIDC exchange script"
-          bookverse-infra/libraries/bookverse-devops/scripts/exchange-oidc-token.sh \
-            --service-name "recommendations" \
-            --provider-name "bookverse-recommendations-github" \
-            --jfrog-url "${{ vars.JFROG_URL }}" \
-            --docker-registry "${{ vars.DOCKER_REGISTRY }}" \
-            --verbose
-          echo "✅ OIDC token exchange completed using shared bookverse-devops script"
+      - name: "[Auth] Enhanced OIDC Token Generation"
+        id: enhanced-oidc
+        uses: bookverse-infra/.github/actions/generate-oidc-token@main
+        with:
+          oidc-provider-url: ${{ vars.JFROG_URL }}
+          oidc-provider-name: bookverse-recommendations-github
+          service-name: recommendations
+          application-key: bookverse-recommendations
+          version: latest
           
       - name: "[Setup] Install Python dependencies"
         run: |
@@ -545,7 +543,7 @@ jobs:
           path: bookverse-infra
 
       - name: "[Setup] JFrog CLI"
-        uses: EyalDelarea/setup-jfrog-cli@swampUpAppTrust
+        uses: bookverse-infra/.github/actions/generate-oidc-token@main
         with:
           version: latest
           oidc-provider-name: bookverse-recommendations-github
@@ -560,11 +558,11 @@ jobs:
           JFROG_CLI_BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
           JFROG_CLI_BUILD_PROJECT: ${{ vars.PROJECT_KEY }}
 
-      - name: "[Auth] OIDC Token Exchange (bookverse-devops shared script)"
+      - name: "[Auth] Enhanced OIDC Token Generation"
         id: exchange-oidc
         run: |
           echo "🔐 Using bookverse-devops shared OIDC exchange script"
-          bookverse-infra/libraries/bookverse-devops/scripts/exchange-oidc-token.sh \
+          bookverse-infra/libraries/bookverse-devops/scripts/enhanced-oidc-auth.sh \
             --service-name "recommendations" \
             --provider-name "bookverse-recommendations-github" \
             --jfrog-url "${{ vars.JFROG_URL }}" \
@@ -814,7 +812,7 @@ jobs:
           export JFROG_URL='${{ vars.JFROG_URL }}'
           export PROJECT_KEY='${{ vars.PROJECT_KEY }}'
           export APPLICATION_KEY="$APPLICATION_KEY"
-          # JF_OIDC_TOKEN is already available from the OIDC exchange step
+          # JF_OIDC_TOKEN is available from enhanced OIDC token generation
           
           # Load the self-healing tag management library
           source bookverse-infra/libraries/bookverse-devops/scripts/tag-management-lib.sh
