--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,14 +112,15 @@ jobs:
           echo "APPLICATION_KEY=bookverse-recommendations" >> $GITHUB_ENV
 
       - name: "[Setup] JFrog CLI"
-        uses: bookverse-infra/.github/actions/generate-oidc-token@main
+        uses: yonatanp-jfrog/bookverse-infra/.github/actions/generate-oidc-token@main
         with:
           version: latest
+          oidc-provider-url: ${{ vars.JFROG_URL }}
           oidc-provider-name: bookverse-recommendations-github
           oidc-audience: ${{ vars.JFROG_URL }}
-          disable-job-summary: true
-          disable-auto-build-publish: true
-          disable-auto-evidence-collection: false
+          service-name: recommendations
+          application-key: bookverse-recommendations
+          project-key: ${{ vars.PROJECT_KEY }}
         env:
           JF_URL: ${{ vars.JFROG_URL }}
           JF_PROJECT: ${{ vars.PROJECT_KEY }}
@@ -135,7 +136,7 @@ jobs:
 
       - name: "[Auth] Enhanced OIDC Token Generation"
         id: enhanced-oidc
-        uses: bookverse-infra/.github/actions/generate-oidc-token@main
+        uses: yonatanp-jfrog/bookverse-infra/.github/actions/generate-oidc-token@main
         with:
           oidc-provider-url: ${{ vars.JFROG_URL }}
           oidc-provider-name: bookverse-recommendations-github
@@ -543,14 +544,15 @@ jobs:
           path: bookverse-infra
 
       - name: "[Setup] JFrog CLI"
-        uses: bookverse-infra/.github/actions/generate-oidc-token@main
+        uses: yonatanp-jfrog/bookverse-infra/.github/actions/generate-oidc-token@main
         with:
           version: latest
+          oidc-provider-url: ${{ vars.JFROG_URL }}
           oidc-provider-name: bookverse-recommendations-github
           oidc-audience: ${{ vars.JFROG_URL }}
-          disable-job-summary: true
-          disable-auto-build-publish: true
-          disable-auto-evidence-collection: false
+          service-name: recommendations
+          application-key: bookverse-recommendations
+          project-key: ${{ vars.PROJECT_KEY }}
         env:
           JF_URL: ${{ vars.JFROG_URL }}
           JF_PROJECT: ${{ vars.PROJECT_KEY }}
