--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,37 +112,44 @@ jobs:
           echo "APPLICATION_KEY=bookverse-recommendations" >> $GITHUB_ENV
 
       - name: "[Setup] JFrog CLI"
-        uses: yonatanp-jfrog/bookverse-infra/.github/actions/generate-oidc-token@main
+        uses: EyalDelarea/setup-jfrog-cli@swampUpAppTrust
+        id: jfrog-cli-auth
         with:
-          version: latest
-          oidc-provider-url: ${{ vars.JFROG_URL }}
           oidc-provider-name: bookverse-recommendations-github
           oidc-audience: ${{ vars.JFROG_URL }}
-          service-name: recommendations
-          application-key: bookverse-recommendations
-          project-key: ${{ vars.PROJECT_KEY }}
         env:
           JF_URL: ${{ vars.JFROG_URL }}
           JF_PROJECT: ${{ vars.PROJECT_KEY }}
-          JFROG_CLI_BUILD_NAME: ${{ env.BUILD_NAME }}
-          JFROG_CLI_BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
-          JFROG_CLI_BUILD_PROJECT: ${{ vars.PROJECT_KEY }}
-          
-      - name: "[Setup] Verify JFrog Authentication"
-        run: |
-          echo "🔐 Verifying JFrog CLI authentication and connectivity..."
-          jf rt ping
-          echo "✅ JFrog authentication successful"
 
-      - name: "[Auth] Enhanced OIDC Token Generation"
-        id: enhanced-oidc
-        uses: yonatanp-jfrog/bookverse-infra/.github/actions/generate-oidc-token@main
-        with:
-          oidc-provider-url: ${{ vars.JFROG_URL }}
-          oidc-provider-name: bookverse-recommendations-github
-          service-name: recommendations
-          application-key: bookverse-recommendations
-          version: latest
+      - name: "[Setup] Extract OIDC Token from JFrog CLI"
+        id: extract-token
+        run: |
+          echo "🔍 Extracting OIDC token from JFrog CLI step output..."
+          
+          # Debug: Check all available outputs from JFrog CLI step
+          echo "🔍 Debugging JFrog CLI step outputs..."
+          echo "Available outputs:"
+          echo "  oidc-user: '${{ steps.jfrog-cli-auth.outputs.oidc-user }}'"
+          echo "  oidc-token: '${{ steps.jfrog-cli-auth.outputs.oidc-token }}'"
+          echo "  access-token: '${{ steps.jfrog-cli-auth.outputs.access-token }}'"
+          echo "  token: '${{ steps.jfrog-cli-auth.outputs.token }}'"
+          
+          # Use the oidc-token output as specified
+          OIDC_TOKEN="${{ steps.jfrog-cli-auth.outputs.oidc-token }}"
+          if [[ -n "$OIDC_TOKEN" && "$OIDC_TOKEN" != "null" ]]; then
+            echo "✅ Successfully retrieved OIDC token from JFrog CLI step output (oidc-token)"
+            echo "📋 Token length: ${#OIDC_TOKEN} characters"
+          else
+            echo "❌ OIDC token not available from JFrog CLI step output (oidc-token)"
+            echo "🔍 Available outputs from jfrog-cli-auth step:"
+            echo "  oidc-user: '${{ steps.jfrog-cli-auth.outputs.oidc-user }}'"
+            echo "  oidc-token: '${{ steps.jfrog-cli-auth.outputs.oidc-token }}'"
+            echo "  access-token: '${{ steps.jfrog-cli-auth.outputs.access-token }}'"
+            echo "  token: '${{ steps.jfrog-cli-auth.outputs.token }}'"
+            exit 1
+          fi
+          
+          echo "oidc_token=$OIDC_TOKEN" >> $GITHUB_OUTPUT
           
       - name: "[Setup] Install Python dependencies"
         run: |
@@ -155,11 +162,19 @@ jobs:
           set -euo pipefail
           SERVICE_NAME=${SERVICE_NAME:-$(echo ${{ github.event.repository.name }} | sed 's/bookverse-//')}
           APPLICATION_KEY="bookverse-$SERVICE_NAME"
-          if [[ -z "${JF_OIDC_TOKEN:-}" ]]; then
-            echo "❌ Missing JF_OIDC_TOKEN. Ensure OIDC exchange step succeeded." >&2
+          # Use OIDC token directly from JFrog CLI step output
+          echo "🔍 Using OIDC token directly from JFrog CLI step output for semver determination..."
+          
+          # Test if we can access the token directly without intermediate assignment
+          OIDC_TOKEN="${{ steps.jfrog-cli-auth.outputs.oidc-token }}"
+          if [[ -z "$OIDC_TOKEN" ]]; then
+            echo "❌ OIDC token not available from JFrog CLI step" >&2
             exit 1
           fi
-          echo "✅ Using persisted JFrog access token for semver determination"
+          
+          echo "✅ OIDC token available from JFrog CLI step"
+          echo "📋 Token length: ${#OIDC_TOKEN} characters"
+          echo "📋 Token starts with: ${OIDC_TOKEN:0:10}..."
           echo "📋 Using shared semver logic from bookverse-infra"
           INFRA_SCRIPTS_PATH="bookverse-infra/libraries/bookverse-devops/scripts"
           if [[ -f "$INFRA_SCRIPTS_PATH/determine-semver.sh" ]]; then
@@ -176,7 +191,7 @@ jobs:
             --application-key "$APPLICATION_KEY" \
             --version-map "./config/version-map.yaml" \
             --jfrog-url "${{ vars.JFROG_URL }}" \
-            --jfrog-token "$JF_OIDC_TOKEN" \
+            --jfrog-token "$OIDC_TOKEN" \
             --project-key "${{ vars.PROJECT_KEY }}" \
             --packages "recommendations,recommendations-worker,recommendation-config,resources" \
             --verbose)
@@ -221,6 +236,7 @@ jobs:
           echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
           echo "app_version=$APP_VERSION" >> $GITHUB_OUTPUT
           echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
+          echo "oidc_token=$OIDC_TOKEN" >> $GITHUB_OUTPUT
           echo "APPLICATION_KEY=$APPLICATION_KEY" >> $GITHUB_ENV
 
       - name: "[Setup] Python"
@@ -271,6 +287,55 @@ jobs:
           echo "📊 Coverage: ${COVERAGE_PERCENT}% (demo simplified)"
           echo "COVERAGE_PERCENT=$COVERAGE_PERCENT" >> $GITHUB_ENV
           echo "coverage_percent=$COVERAGE_PERCENT" >> $GITHUB_OUTPUT
+
+      - name: "[Build] Docker Registry Authentication"
+        run: |
+          set -euo pipefail
+          echo "🔐 Authenticating Docker with JFrog registry..."
+          
+          # Get the OIDC token for Docker authentication
+          OIDC_TOKEN="${{ steps.jfrog-cli-auth.outputs.oidc-token }}"
+          if [[ -z "$OIDC_TOKEN" ]]; then
+            echo "❌ OIDC token not available for Docker authentication" >&2
+            exit 1
+          fi
+          
+          # Extract Docker registry from JFrog URL
+          DOCKER_REGISTRY="${{ vars.JFROG_URL }}"
+          DOCKER_REGISTRY="${DOCKER_REGISTRY#https://}"
+          DOCKER_REGISTRY="${DOCKER_REGISTRY#http://}"
+          
+          # Extract username from JWT token for Docker login
+          TOKEN_PAYLOAD=$(echo "$OIDC_TOKEN" | cut -d. -f2)
+          # Add padding if needed
+          case $((${#TOKEN_PAYLOAD} % 4)) in
+            2) TOKEN_PAYLOAD="${TOKEN_PAYLOAD}==" ;;
+            3) TOKEN_PAYLOAD="${TOKEN_PAYLOAD}=" ;;
+          esac
+          
+          CLAIMS=$(echo "$TOKEN_PAYLOAD" | tr '_-' '/+' | base64 -d 2>/dev/null || true)
+          DOCKER_USER=$(echo "$CLAIMS" | jq -r '.username // .sub // .subject // "oauth2_access_token"' 2>/dev/null || echo "oauth2_access_token")
+          
+          # If sub is in the form jfac@.../users/<username>, extract the trailing <username>
+          if [[ "$DOCKER_USER" == *"/users/"* ]]; then
+            DOCKER_USER=${DOCKER_USER##*/users/}
+          fi
+          
+          # Fallback to oauth2_access_token if no username found
+          if [[ -z "$DOCKER_USER" || "$DOCKER_USER" == "null" ]]; then
+            DOCKER_USER="oauth2_access_token"
+          fi
+          
+          echo "🐳 Authenticating Docker with registry: $DOCKER_REGISTRY"
+          echo "📋 Using username: $DOCKER_USER"
+          
+          # Perform Docker login
+          if echo "$OIDC_TOKEN" | docker login "$DOCKER_REGISTRY" -u "$DOCKER_USER" --password-stdin; then
+            echo "✅ Docker authentication successful"
+          else
+            echo "❌ Docker authentication failed" >&2
+            exit 1
+          fi
 
       - name: "[Build] API image"
         run: |
