--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -587,33 +587,31 @@ jobs:
           path: bookverse-infra
 
       - name: "[Setup] JFrog CLI"
-        uses: yonatanp-jfrog/bookverse-infra/.github/actions/generate-oidc-token@main
+        uses: EyalDelarea/setup-jfrog-cli@swampUpAppTrust
+        id: jfrog-cli-auth
         with:
-          version: latest
-          oidc-provider-url: ${{ vars.JFROG_URL }}
           oidc-provider-name: bookverse-recommendations-github
           oidc-audience: ${{ vars.JFROG_URL }}
-          service-name: recommendations
-          application-key: bookverse-recommendations
-          project-key: ${{ vars.PROJECT_KEY }}
         env:
           JF_URL: ${{ vars.JFROG_URL }}
           JF_PROJECT: ${{ vars.PROJECT_KEY }}
-          JFROG_CLI_BUILD_NAME: ${{ needs.build-test-publish.outputs.build_name }}
-          JFROG_CLI_BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
-          JFROG_CLI_BUILD_PROJECT: ${{ vars.PROJECT_KEY }}
 
-      - name: "[Auth] Enhanced OIDC Token Generation"
-        id: exchange-oidc
+      - name: "[Setup] Extract OIDC Token for Promotion Job"
+        id: extract-promotion-token
         run: |
-          echo "🔐 Using bookverse-devops shared OIDC exchange script"
-          bookverse-infra/libraries/bookverse-devops/scripts/enhanced-oidc-auth.sh \
-            --service-name "recommendations" \
-            --provider-name "bookverse-recommendations-github" \
-            --jfrog-url "${{ vars.JFROG_URL }}" \
-            --docker-registry "${{ vars.DOCKER_REGISTRY }}" \
-            --verbose
-          echo "✅ OIDC token exchange completed using shared bookverse-devops script"
+          echo "🔍 Extracting OIDC token from JFrog CLI step output for promotion job..."
+          
+          PROMOTION_OIDC_TOKEN="${{ steps.jfrog-cli-auth.outputs.oidc-token }}"
+          if [[ -n "$PROMOTION_OIDC_TOKEN" && "$PROMOTION_OIDC_TOKEN" != "null" ]]; then
+            echo "✅ Successfully retrieved OIDC token from JFrog CLI step output (oidc-token)"
+            echo "📋 Token length: ${#PROMOTION_OIDC_TOKEN} characters"
+            echo "promotion_oidc_token=$PROMOTION_OIDC_TOKEN" >> $GITHUB_OUTPUT
+            echo "JF_OIDC_TOKEN=$PROMOTION_OIDC_TOKEN" >> $GITHUB_ENV
+          else
+            echo "❌ OIDC token not available from JFrog CLI step output (oidc-token) in promotion job" >&2
+            exit 1
+          fi
+          echo "✅ OIDC token exchange completed using new standard pattern"
 
       - name: "[Setup] Install Python dependencies"
         run: |
