--- a/.github/workflows/promotion-rollback.yml
+++ b/.github/workflows/promotion-rollback.yml
@@ -81,15 +81,14 @@ jobs:
           echo "JF_OIDC_TOKEN=$JF_OIDC_TOKEN" >> $GITHUB_ENV
 
       - name: "[Setup] JFrog CLI"
-        uses: bookverse-infra/.github/actions/generate-oidc-token@main
+        uses: EyalDelarea/setup-jfrog-cli@swampUpAppTrust
+        id: jfrog-cli-auth
+        with:
+          oidc-provider-name: bookverse-recommendations-github
+          oidc-audience: ${{ vars.JFROG_URL }}
         env:
           JF_URL: ${{ vars.JFROG_URL }}
           JF_PROJECT: ${{ vars.PROJECT_KEY }}
-        with:
-          version: latest
-          oidc-provider-name: bookverse-recommendations-github
-          disable-job-summary: true
-          oidc-audience: ${{ vars.JFROG_URL }}
 
       - name: "[Rollback] Execute"
         shell: bash
